# mini-blockchain

./: .gitignore  CMakeLists.txt  build_mac.sh  builder.dockerfile  builder_entrypoint.sh  docker-compose.yml  runner.dockerfile
include/logger/: logger.h
include/net/: client_controller.h  consts.h  master_controller.h  net_controller.h  net_msg.h
scripts/: run.ps1  run.sh  stop.ps1  stop.sh
src/: CMakeLists.txt  main.cpp
src/logger/: logger.cpp
src/net/: client_controller.cpp  consts.h  macros.h  master_controller.cpp  net_controller.cpp  net_controller.h  netdb.cpp
src/net/blockchain/: README.md
src/net/client/: controller.cpp  controller.h
src/net/master/: controller.cpp  controller.h
